<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/cardName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        style="@style/card_input"
        android:hint="@string/name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/cardMiddleame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        style="@style/card_input"
        android:hint="@string/middlename" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/cardSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        style="@style/card_input"
        android:hint="@string/surname" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/cardBirthdate"
        style="@style/card_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:hint="@string/birthday"
        android:inputType="date" />

    <Spinner
        android:id="@+id/cardSex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:entries="@array/sex"
        android:spinnerMode="dialog"
        style="@style/card_input" />

</androidx.appcompat.widget.LinearLayoutCompat>