<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createPasswordSkipBtn"
        style="@android:style/Widget.DeviceDefault.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/skip"
        android:textColor="#57A9FF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/create_password"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createPasswordSkipBtn" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/data_security"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/createPasswordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:foregroundGravity="center"
        android:orientation="horizontal"
        android:scaleType="centerInside"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createPasswordInput">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createPasswordBtn1"
                android:layout_width="@dimen/password_btn"
                android:layout_height="@dimen/password_btn"
                android:layout_margin="7dp"
                android:background="@drawable/password_button"
                android:text="1"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createPasswordBtn2"
                android:layout_width="@dimen/password_btn"
                android:layout_height="@dimen/password_btn"
                android:layout_margin="7dp"
                android:background="@drawable/password_button"
                android:text="2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createPasswordBtn3"
                android:layout_width="@dimen/password_btn"
                android:layout_height="@dimen/password_btn"
                android:layout_margin="7dp"
                android:background="@drawable/password_button"
                android:text="3"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createPasswordBtn4"
                android:layout_width="@dimen/password_btn"
                android:layout_height="@dimen/password_btn"
                android:layout_margin="7dp"
                android:background="@drawable/password_button"
                android:text="4"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createPasswordBtn5"
                android:layout_width="@dimen/password_btn"
                android:layout_height="@dimen/password_btn"
                android:layout_margin="7dp"
                android:background="@drawable/password_button"
                android:text="5"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createPasswordBtn6"
                android:layout_width="@dimen/password_btn"
                android:layout_height="@dimen/password_btn"
                android:layout_margin="7dp"
                android:background="@drawable/password_button"
                android:text="6"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createPasswordBtn7"
                android:layout_width="@dimen/password_btn"
                android:layout_height="@dimen/password_btn"
                android:layout_margin="7dp"
                android:background="@drawable/password_button"
                android:text="7"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createPasswordBtn8"
                android:layout_width="@dimen/password_btn"
                android:layout_height="@dimen/password_btn"
                android:layout_margin="7dp"
                android:background="@drawable/password_button"
                android:text="8"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createPasswordBtn9"
                android:layout_width="@dimen/password_btn"
                android:layout_height="@dimen/password_btn"
                android:layout_margin="7dp"
                android:background="@drawable/password_button"
                android:text="9"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createPasswordBtn0"
                android:layout_width="@dimen/password_btn"
                android:layout_height="@dimen/password_btn"
                android:layout_margin="7dp"
                android:background="@drawable/password_button"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="@dimen/password_btn"
                android:layout_height="@dimen/password_btn"
                android:layout_margin="7dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/createPasswordBackspaceBtn"
                    android:layout_width="@dimen/backspace_btn"
                    android:layout_height="@dimen/backspace_btn"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/remove_pic" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>